--- a/trunk/project/code/Presentation/Nop.Web/FileNotFound.htm
+++ b/trunk/project/code/Presentation/Nop.Web/FileNotFound.htm
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <title>File not found</title>
@@ -15,7 +15,7 @@
         <br />
         <br />
         <div style="font-size: 16pt; font-weight: bold;">
-            Page not found
+            Không tìm thấy trang cần tìm
         </div>
         <p style="font-size: 14pt;">
             We're sorry, we can't find that page.
